# rust_httpserver

./: Cargo.toml  README.md  index.html
src/: error.rs  handlers.rs  main.rs  models.rs
